--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/vue": "^4.0.1",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "astro": "^4.0.1",
+    "astro-icon": "^0.8.2",
     "vue-material-design-icons": "^5.2.0",
     "vue3-simple-icons": "^10.0.0"
   }
