--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/vue": "^4.0.1",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@philnash/astro-pagination": "^0.4.0",
     "astro": "^4.0.1",
     "astro-icon": "^0.8.2",
     "vue-material-design-icons": "^5.2.0",
