--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # build output
 dist/
 
-# generated types
+# generated/caches
 .astro/
+.vercel
 
 # dependencies
 node_modules/
@@ -16,6 +17,8 @@ pnpm-debug.log*
 # environment variables
 .env
 .env.production
+.env.local
+*.local
 
 # macOS-specific files
 .DS_Store
