--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,7 @@
       "@styles/*": ["src/styles/*"],
       "@lib/*": ["src/lib/*"],
     }
-  }
+  },
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"]
 }
