--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@astrojs/vue": "^5.0.5",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "astro": "^5.1.7",
-    "astro-icon": "^0.8.2",
-    "vue-material-design-icons": "^5.2.0",
-    "vue3-simple-icons": "^10.0.0"
+    "astro-icon": "^1.1.5",
+    "vue3-simple-icons": "^10.4.0"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.2.2",
     "remark": "^15.0.1",
     "remark-excerpt": "^1.0.0-beta.1",
     "strip-markdown": "^6.0.0"
